Use Boolean.valueOf() to avoid allocating objects.